--- a/includes/menu.html
+++ b/includes/menu.html
@@ -12,7 +12,7 @@
   <nav id="topnav">
     <ul class="clear">
       <li><a href="index.html"><b>Home</b></a></li>
-      <li><a href="past_and_current_projects.html"><b>Past and Current Projects</b></a></li>
+      <li><a href="website_and_mobile_app.html"><b>Website and Mobile App Projects</b></a></li>
       <li><a href="art_studio.html"><b>Art Studio</b></a></li>
       
       <!--
