--- a/includes/menu.html
+++ b/includes/menu.html
@@ -13,9 +13,16 @@
     <ul class="clear">
       <li><a href="index.html"><b>Home</b></a></li>
       <li><a href="website_and_mobile_app.html"><b>Website and Mobile App Projects</b></a></li>
-      <li><a href="art_studio.html"><b>Art Studio</b></a></li>
+  <li><a class="drop" href="#"><b>Studio Art</b> <i class="fa fa-caret-down"></i></a>
+            <ul>
+              <li><a href="drawing.html"><b>Drawing</b></a></li>
+              <li><a href="2D_digital_art.html">2D Digital Art</a></li>
+            </ul>
+          </li>
       
       <!--
+      <a href="javascript:void(0)" class="dropbtn">Dropdown</a><i class="fa fa-caret-down"></i>
+      <li><a href="art_studio.html"><b>Art Studio</b></a></li>
       <li><a href="about.html"><b>About</b></a></li>
       <li><a href="news.html">Graphic Design</a></li>
       <li><a href="photograph.html">Photograph</a></li>
