--- a/styles/layout.css
+++ b/styles/layout.css
@@ -70,7 +70,7 @@ blockquote:after, q:after{content:' „'; font-size:26px; line-height:0;}
 .one_quarter, .two_quarter, .three_quarter{display:block; float:left; margin:0 0 0 20px;}
 .one_quarter{width:225px;}
 .two_quarter{width:470px;}
-.three_quarter{width:715px;}
+.three_quarter{width:796px;}
 
 .one_third, .two_third{display:block; float:left; margin:0 0 0 30px;}
 .one_third{width:300px;}
@@ -215,6 +215,20 @@ table, th, tr, td {
   height: 250px;
   width: 240px;
 }
+
+.arrow {
+  border: solid black;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+  color: red;
+}
+
+.right {
+  transform: rotate(-45deg);
+  -webkit-transform: rotate(-45deg);
+}
+
 /*----------------------------------------------Footer-------------------------------------*/
 
 #footer{padding:30px 0; line-height:1.6em; border-bottom:1px solid #2F2F2F;}
