--- a/includes/menu.html
+++ b/includes/menu.html
@@ -16,7 +16,7 @@
   <li><a class="drop" href="#"><b>Studio Art</b> <i class="fa fa-caret-down"></i></a>
             <ul>
               <li><a href="drawing.html"><b>Drawing</b></a></li>
-              <li><a href="2D_digital_art.html">2D Digital Art</a></li>
+              <li><a href="2D_digital_art.html"><b>2D Digital Art</b></a></li>
             </ul>
           </li>
       
