--- a/includes/menu.html
+++ b/includes/menu.html
@@ -13,12 +13,14 @@
     <ul class="clear">
       <li><a href="index.html"><b>Home</b></a></li>
       <li><a href="website_and_mobile_app.html"><b>Website and Mobile App Projects</b></a></li>
-  <li><a class="drop" href="#"><b>Studio Art</b> <i class="fa fa-caret-down"></i></a>
+      <li><a class="drop" href="#"><b>Studio Art</b> <i class="fa fa-caret-down"></i></a>
             <ul>
               <li><a href="drawing.html"><b>Drawing</b></a></li>
-              <li><a href="2D_digital_art.html"><b>2D Digital Art</b></a></li>
+              <li><a href="2D_design_art.html"><b>2D Design Art</b></a></li>
+              <li><a href="3D_design_art.html"><b>3D Design Art</b></a></li>
             </ul>
           </li>
+      <li><a href="graphicdesign.html"><b>Graphic Design</b></a></li>
       
       <!--
       <a href="javascript:void(0)" class="dropbtn">Dropdown</a><i class="fa fa-caret-down"></i>
