--- a/includes/menu.html
+++ b/includes/menu.html
@@ -21,6 +21,7 @@
             </ul>
           </li>
       <li><a href="graphicdesign.html"><b>Graphic Design</b></a></li>
+      <li><a href="photography.html"><b>Photography</b></a></li>
       
       <!--
       <a href="javascript:void(0)" class="dropbtn">Dropdown</a><i class="fa fa-caret-down"></i>
