--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -11,7 +11,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 #container #homepage #shout{color:#333333; background-color:#FFFFFF; text-align:center; font-size:32px; line-height:normal;}
 #container #homepage #shout p{margin:0; padding:0;}
 
-#container #homepage #latest{margin:0 0 50px 0; padding:0 0 50px 0; border-bottom:1px solid #D6D6D6;}
+#container #homepage #latest{margin:0 0 50px 0; padding:0 0 50px 0; border-bottom:1px solid #D6D6D6; background-color:#FFFFFF;}
 #container #homepage #latest article{}
 #container #homepage #latest article figure ul{display:block; float:left; margin:0; padding:0; list-style:none;}
 #container #homepage #latest article figure ul li{margin-bottom:10px;}
