--- a/styles/layout.css
+++ b/styles/layout.css
@@ -9,6 +9,7 @@ Licence: <a href="http://www.os-templates.com/template-terms">Website Template L
 @import url(navi.css);
 @import url(tables.css);
 @import url(homepage.css);
+@import url(slideshow.css);
 /*@import url(gallery.css);*/
 
 html{overflow-y:scroll;}
@@ -73,7 +74,7 @@ blockquote:after, q:after{content:' „'; font-size:26px; line-height:0;}
 .one_quarter, .two_quarter, .three_quarter{display:block; float:left; margin:0 0 0 20px;}
 .one_quarter{width:225px;}
 .two_quarter{width:470px;}
-.three_quarter{width:796px;}
+.three_quarter{width:600px;}
 
 .one_third, .two_third{display:block; float:left; margin:0 0 0 30px;}
 .one_third{width:300px;}
