--- a/includes/menu.html
+++ b/includes/menu.html
@@ -2,7 +2,7 @@
 <div class="wrapper row1">
   <header id="header" class="clear">
     <hgroup>
-      <img src="images/ml_logo2.png" alt="">
+      <img src="images/logo.png" alt="">
     </hgroup>
     <form action="#" method="post">
     </form>
