--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,14 +1,7 @@
-<!-- Copyright -->
-<div class="wrapper row5">
-  <footer id="copyright" class="clear">
-    <p class="fl_left">Copyright &copy; 2025 &nbsp; &nbsp;</p>
-    <!--<p class="fl_right">Template by <a target="_blank" href="http://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>-->
-  </footer>
-</div>
-<script>
-$(document).ready(function () {
-    $("#nl_name, #nl_email").defaultvalue("Name", "Email Address");
-});
-</script>
+<div class="wrapper row5 ">
+    <footer id="copyright" class="clear">
+    <p class="fl_center">Madelyn Li &nbsp; <i>limadelyn94@gmail.com</i> &nbsp; 2025 &nbsp; &nbsp;</p>
+    </footer>
+ </div>
 </body>
 </html>
