--- a/includes/menu.html
+++ b/includes/menu.html
@@ -1,7 +1,7 @@
 	
 <div class="wrapper row1">
   <header id="header" class="clear">
-      <img src="images/ml_logo.png" alt=""> 
+      <a href="index.html"><img src="images/ml_logo.png" alt=""> </a>
   </header>
 </div>
 <div class="wrapper row2">
